# xpectral-chart

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
assets/: generate_banner.py
docs/source/: conf.py  index.rst
docs/source/api/: charts.rst
examples/charts/: accessors.ipynb  stacked_line_legends.ipynb
tests/: test__charts_accessors_dates.py  test__charts_accessors_stacks.py  test__charts_theme_manager.py
xpectral/: _typing.py
xpectral/charts/: README.md  __init__.py  _decorators.py  _figure.py  accessors.py  accessors.pyi  palette_manager.py  polars_accessors.py  theme_manager.py
