[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpectral-chart"
version = "1.0.4"
description = "Fluent Bokeh charting for Polars and Pandas DataFrames"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "BayQuant" }
]
keywords = ["bokeh", "charting", "visualization", "polars", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "bokeh==3.8.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",                      # code formatter
    "ipykernel>=7.0.1",               # jupyter notebook support
    "pre-commit",                     # git hook manager
    "pytest",                         # test runner
    "furo>=2024.0",                   # sphinx theme for docs
    "myst-parser>=3.0",               # markdown support in sphinx docs
    "sphinx>=8.0",                    # sphinx documentation generator
    "sphinx-autodoc-typehints>=2.0",  # type hint rendering in sphinx docs
]

[project.urls]
Homepage = "https://github.com/bayquant/xpectral-chart"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # Line too long — handled by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["xpectral"]

# `xpectral` is a PEP 420 namespace package shared with xpectral-quant, so it
# has no top-level __init__.py. Ship only the chart half of the namespace.
[tool.hatch.build.targets.wheel]
only-include = ["xpectral/charts", "xpectral/_typing.py", "xpectral/py.typed"]
